# mindFlow

./: .gitignore  pyproject.toml
assets/: style.css
assets/styles/: style.css
config/: settings.py  urls.py
notes/: admin.py  models.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_auto_20250410_1725.py  0002_remove_task_description.py  0003_auto_20250225_1153.py  0003_completetask.py  0004_passwordresettoken.py  0005_userheadertitle.py  0006_rename_userheadertitle_headertitle.py
notes/templatetags/: custom_filters.py
static/assets/styles/: style.css
static/js/: auth-form-transfer.js  delete-task.js  form-validation.js  header-name-transfer.js  new-task-transfer.js  password-reset-form-confirm-transfer.js  password-reset-form-transfer.js  regis-form-transfer.js  update-task.js  utilities.js
templates/notes/: authorization.html  base.html  index.html  password-reset.html  password_reset_confirm.html  registration.html
templates/notes/task/: task.html
templates/notes/tasks/: task.html
tools/: tools.py
