[project]
name = "mindflow-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandr-Starkov",email = "Starkoff55@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (==4.2.11)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "django-debug-toolbar (>=5.1.0,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
